Updated URL construction and cleaned up Exceptions for Java 20